# tauri-book-report

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src-tauri/: .gitignore  Cargo.toml  book_report.db  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/controller/: command_controller.rs  data_controller.rs  db_controller.rs  mod.rs  xml_controller.rs  xml_paser.rs
src-tauri/src/model/: book_info.rs  book_report.rs  mod.rs
ui/: index.html  main.js  package-lock.json  report.html
ui/component/: app_info.html  modals.html
ui/controller/: book_controller.js  book_home_controller.js  book_rank_controller.js  book_report_controller.js  book_write_controller.js  include.js
ui/pages/: login.html  report.html
