[package]
name = "tauri-book-report"
version = "0.0.1"
description = "A book report app made with Tauri"
authors = ["wkqcosoft"]
license = "MIT"
repository = "https://github.com/wkqco33/tauri-book-report"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }
reqwest = "0.11.14"
quick-xml = "0.27.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
